--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,28 @@
+.container {
+    margin-bottom: 25px;
+    padding: 25px;
+}
+.row {
+    margin-bottom: 25px;
+}
+
+.btn-group button {
+    background-color: #4CAF50;
+    border: 1px solid green;
+    color: white;
+    padding: 10px 24px;
+    cursor: pointer;
+    width: 100%;
+    display: block; 
+}
+
+.btn-group button:not(:last-child) {
+    border-bottom: none;
+  }
+  
+.btn-group button:hover {
+    background-color: #3e8e41;
+}
 ul {
     list-style-type: none;
     padding: 0;
