--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,15 @@
+body {
+    background-image: url(./laptop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Quicksand', sans-serif;
+}
+
+h1 {
+    font-family: 'Pacifico', cursive;
+}
+
+
 .container {
     margin-bottom: 25px;
     padding: 25px;
@@ -7,9 +19,9 @@
 }
 
 .btn-group button {
-    background-color: #4CAF50;
-    border: 1px solid green;
-    color: white;
+    background-color: white;
+    border: 1px solid black;
+    color: black;
     padding: 10px 24px;
     cursor: pointer;
     width: 100%;
@@ -21,7 +33,7 @@
   }
   
 .btn-group button:hover {
-    background-color: #3e8e41;
+    background-color: lightblue;
 }
 ul {
     list-style-type: none;
@@ -34,4 +46,19 @@ ul {
 
 .disabled {
     /* change color to gray */
+}
+
+.grow {
+    width: 400px;
+
+}
+
+#timer {
+    font-size: 20px;
+    color: black;
+}
+
+#feedback {
+    font-size: 20px;
+    font-weight: bold;
 }
