--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,11 @@ h1 {
 }
 
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 .container {
     margin-bottom: 25px;
     padding: 25px;
@@ -36,14 +41,9 @@ h1 {
     background-color: lightblue;
 }
 
-.clicked {
+/* .clicked {
     background-color: lightblue;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
+} */
 
 .hide {
     display: none;
