--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,10 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
-h1 {
-    font-family: 'Pacifico', cursive;
+h1,
+h2 {
+    /* font-family: 'Pacifico', cursive; */
+    font-weight: bolder;
 }
 
 
@@ -41,17 +43,13 @@ ul {
     background-color: lightblue;
 }
 
-/* .clicked {
-    background-color: lightblue;
-} */
-
 .hide {
     display: none;
 }
 
-.disabled {
-    /* change color to gray */
-}
+/* .disabled {
+    change color to gray
+}*/
 
 .grow {
     width: 400px;
@@ -61,9 +59,4 @@ ul {
 #timer {
     font-size: 20px;
     color: black;
-}
-
-#feedback {
-    font-size: 20px;
-    font-weight: bold;
 }
